# lab

./: .gitignore  README.md
.euler/: 3.hs  4.hs  P1.hs  P10.hs  P11.hs  P12.hs  P13.hs  P14.hs  P15.hs  P16.hs  P17.hs  P18.hs  P19.hs  P2.hs  P20.hs  P21.hs  P22.hs  P23.hs  P3.hs  P5.hs  P6.hs  P7.hs  P8.hs  P9.hs
MA2-Problems/: problem005.jl
MA3-Systems/plt/: fig-06.plt  fig-22.plt
MA4-Geometry/: Makefile  README.md
MA4-Geometry/lib/: Circle.jl  Line.jl
MA4-Geometry/plt/: Proposition-1.plt
MA4-Geometry/src/: Proposition-1.jl
algebra/: exe21.hs  exe23.hs  exe31.hs  exe41.hs  exe42.hs
asm/: Dockerfile  Makefile  README.md
asm/hello_world/: Makefile  main.s
asm/program_counter/: Makefile  main  main.s
docs/: Makefile  algebre.tex  applications.md  ensembles.md  logique.md  notes.tex  polynomes.tex  preambule.tex  raisonnements.md
euclid-lab/: INDEX.md  Makefile
euclid-lab/lib/: Circle.jl  Elements.jl  Line.jl  Lines.jl  Point.jl  Points.jl
euclid-lab/plt/: circles.plt  elements.plt  lines.plt  points.plt
euclid-lab/src/: elements.jl  lines.jl  points.jl
euler/: Makefile  Readme.md  problem002.jl  problem003.jl  problem004.jl  problem006.jl  problem007.jl  problem008.jl  problem009.jl  problem026.jl
euler-lab/: problem001.jl
euler/src/: problem1.f90  problem884.f90
maclaurin/: test.jl
maclaurin/plt/: maclaurin.plt
maclaurin/src/: maclaurin.jl  test.jl
meadows/: Makefile  Readme.md
meadows/plt/: balancing.plt  stock.plt
meadows/src/: dynamic-equilibrium.f90  heat-loss.f90  stock.f90
mechanics/aerodynamics/: CMakeLists.txt
mechanics/aerodynamics/modules/: EnergyManeuverability.f90  UnitConversions.f90
mechanics/aerodynamics/src/: test-conversions.f90
mechanics/kinematics/: CMakeLists.txt
mechanics/kinematics/modules/: suvat.f90
mechanics/kinematics/src/: free-fall.f90
os-lab/: Makefile
os-lab/src/: main.asm
quadraticsAndCubics/: quadraticsAndCubics.cabal
quadraticsAndCubics/app/: plot.hs  plotExe31.hs  plots.hs  test.hs  testPlot.hs
quadraticsAndCubics/lib/: exe11.hs  exe12.hs  exe13.hs  exe14.hs  exe15.hs  exe21.hs  exe22.hs  exe31.hs  plot.hs  polynomials.hs  quadratics.hs
realAnalysis/: testSets.hs
rust/guessing_game/src/: main.rs
rust/hello_world/: Makefile  main
rust/ownership/: Makefile  dangle.rs  give_ownership.rs  modify_borrow.rs  scopes.rs  slice_problem.rs  strings.rs  take_ownership.rs
rust/variables/src/: main.rs
simulations/: CHANGELOG.md  simulations.cabal
simulations/app/: basic-gloss.hs  basic-particles.hs  bounce-particles.hs  lattice-particles.hs  verlet-particles.hs
src/algebra/: Makefile  algebra.f90  cgse_11  cgse_12  cgse_12.f90  cgse_calculations.f90  cgse_multiples_factors.f90
src/ensembles/: CHANGELOG.md  ensembles.cabal
src/ensembles/app/: P1.hs
src/kinematics/: Makefile  phy_21.f90  phy_211.f90  phy_212.f90  phy_213.f90  phy_213.gnu  phy_214.f90  phy_215.f90  phy_216.f90  solar_system.gnu  tutor.gnu
src/linalg/: Makefile  linalg.f90  nr_linalg.f90  nr_linalg.out
src/logique/: CHANGELOG.md  logique.cabal
src/logique/app/: P1.hs  P2.hs  P3.hs  P4.hs
src/logique/src/: Logic.hs
src/visualisation/: gia21.gnu  gia22.gnu  gia23.gnu  tuto1.gnu  tuto2.gnu  tuto3.gnu  tuto4.gnu  tuto5.gnu
src/visualisation/listing/: 2_1.gnu  2_2.gnu  2_3.gnu  2_4.gnu  2_5.gnu  2_6.gnu  3_1.gnu  3_2.gnu  3_3.gnu  3_4.gnu  3_5.gnu  3_6.gnu  4_1.gnu
systems/: Makefile
systems-lab/: Makefile  README.md  fig-6.jl
systems-lab/plt/: dynamic-equilibrium.plt  fig-06.plt  fig-11.plt  fig-19.plt  fig-6.plt  heat-loss.plt  population.plt  room-temperature.plt
systems-lab/src/: balancing.f90  fig-11.jl  fig-16.jl  fig-17.jl  fig-19.jl  fig-22.jl  fig-6.jl  reinforcing.f90  room-temperature.f90
systems/plt/: reinforcing.plt
systems/src/: fig-06.jl  fig-13.jl  fig-16.jl  fig-18.jl  population.f90
