cabal-version:      2.4
name:               quadraticsAndCubics
version:            0.1.0.0

library
      hs-source-dirs: 
            lib
      exposed-modules: 
            Exe31
            Polynomials
      other-modules:
      build-depends: 
              base ^>=4.16.4.0
            , gloss
            , linear

executable plotExe31
      hs-source-dirs:   
            app
      main-is:          
            plotExe31.hs
      build-depends:    
              base ^>=4.16.4.0
            , quadraticsAndCubics
            , gloss
      default-language: 
            Haskell2010
