cabal-version:      2.4
name:               quadraticsAndCubics
version:            0.1.0.0

library
      hs-source-dirs: 
            lib
      exposed-modules: 
            Polynomials
      other-modules:
      build-depends: 
              base ^>=4.16.4.0
            , gloss
            , linear

executable plots
      hs-source-dirs:   
            app
      main-is:          
            plots.hs
      build-depends:    
              base ^>=4.16.4.0
            , quadraticsAndCubics
            , gloss
      default-language: 
            Haskell2010
