cabal-version:        2.4
name:                 quadraticsAndCubics
version:              0.1.0.0
library
    hs-source-dirs:   lib
    exposed-modules:  Polynomials, Quadratics
    other-modules:
    build-depends:    base ^>=4.16.4.0, gloss, linear

executable test
    hs-source-dirs:   app
    main-is:          test.hs
    build-depends:    base ^>= 4.16.4.0, quadraticsAndCubics, gloss
    default-language: Haskell2010
executable plot
    hs-source-dirs:   app
    main-is:          plot.hs
    build-depends:    base ^>= 4.16.4.0, quadraticsAndCubics, gloss, linear
    default-language: Haskell2010
