cabal-version:      2.4
name:               simulations
version:            0.1.0.0
author:             nimisbert
maintainer:         n.misbert@yahoo.fr
extra-source-files: CHANGELOG.md

executable basic-gloss
    main-is:          basic-gloss.hs
    build-depends:    base ^>=4.16.4.0
                    , linear
                    , gloss
    hs-source-dirs:   app
    default-language: Haskell2010
 
executable basic-particles
    main-is:          basic-particles.hs
    build-depends:    base ^>=4.16.4.0
                    , linear
                    , gloss
    hs-source-dirs:   app
    default-language: Haskell2010

executable bounce-particles
    main-is:          bounce-particles.hs
    build-depends:    base ^>=4.16.4.0
                    , linear
                    , gloss
    hs-source-dirs:   app
    default-language: Haskell2010
 
executable verlet-particles
    main-is: verlet-particles.hs
    build-depends: base ^>=4.16.4.0
                  , linear
                  , gloss
    hs-source-dirs: app
    default-language: Haskell2010

executable lattice-particles
    main-is: lattice-particles.hs
    build-depends:  base ^>=4.16.4.0
                  , linear 
                  , gloss
    hs-source-dirs: app
    default-language: Haskell2010
