cabal-version:      2.4
name:               logique
version:            0.1.0.0
author:             nimisbert
maintainer:         n.misbert@yahoo.fr
copyright:          MIT
extra-source-files: CHANGELOG.md

library 
    hs-source-dirs:   src
    exposed-modules:  Logic
    build-depends:    base ^>=4.16.4.0

executable P1
    main-is:          P1.hs
    build-depends:    base ^>=4.16.4.0, logique
    hs-source-dirs:   app
    default-language: Haskell2010
executable P2
    main-is:          P2.hs
    build-depends:    base ^>=4.16.4.0, logique
    hs-source-dirs:   app
    default-language: Haskell2010
executable P3
    main-is:          P3.hs
    build-depends:    base ^>=4.16.4.0, logique
    hs-source-dirs:   app
    default-language: Haskell2010
executable P4
    main-is:          P4.hs
    build-depends:    base ^>=4.16.4.0, logique
    hs-source-dirs:   app
    default-language: Haskell2010
